# EverlastAI

./: .env.example  .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  claude.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.claude/agents/: clean-code-auditor.md  github-repo-optimizer.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: build-static.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/landing/: page.tsx
src/components/: providers.tsx
src/components/auth/: login-button.tsx  user-profile.tsx
src/components/output/: output-display.tsx
src/components/sessions/: session-cards.tsx  session-detail.tsx
src/components/settings/: api-key-settings.tsx  integrations-settings.tsx  llm-settings.tsx  settings-dialog.tsx  transcription-settings.tsx
src/components/ui/: hotkey-indicator.tsx  toast.tsx
src/components/voice/: audio-visualizer.tsx  live-recorder.tsx  voice-recorder.tsx
src/contexts/: auth-context.tsx
src/hooks/: use-auth.ts  use-settings.ts  use-toast.ts
src/lib/: api-validation.ts  export.ts  sessions.ts  utils.ts
src/lib/integrations/: n8n.ts
src/lib/llm/: claude.ts  index.ts  (+2 more)
src/types/: index.ts  transcription.ts
tests/: placeholder.test.ts  setup.ts
(+14 files in other folders)
